# bloock-blake-rs

./: Cargo.toml  README.md
benches/: blake512.rs
src/: block.rs  helpers.rs  lib.rs
