[package]
name = "bloock-blake-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "Marc Baqué <marc@bloock.com>",
    "Eduard Tomàs <eduard.tomas@bloock.com>",
]
description = "Blake hash implementation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bloock/bloock-blake-rs"

[dependencies]
digest = "0.9"
block-buffer = "0.9"

[dev-dependencies]
criterion = "0.5"
hex = "0.4.3"

[[bench]]
name = "blake512"
harness = false
